logs/mobility/build.make.003.log.stderr
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.cpp: In member function ‘std::pair<float, float> ALSAController::getNextGoalPosition(std::pair<float, float>)’:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.cpp:23:48: error: invalid operands of types ‘float’ and ‘float’ to binary ‘operator^’
   float step_length = xmin*(unif_var)^(1/(mu-1));
                                                ^
make[2]: *** [CMakeFiles/mobility.dir/src/ALSAController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
